# docs/swagger.json
@@ -29,7 +29,7 @@
                 "parameters": [
                     {
                         "description": "用户名",
-                        "name": "user_name",
+                        "name": "userName",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -191,7 +191,7 @@
                     {
                         "type": "string",
                         "description": "用户id",
-                        "name": "user-id",
+                        "name": "user-uuid",
                         "in": "header",
                         "required": true
                     },
@@ -259,7 +259,7 @@
                     {
                         "type": "string",
                         "description": "用户id",
-                        "name": "user-id",
+                        "name": "user-uuid",
                         "in": "header",
                         "required": true
                     },
